; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-mpi.c_pgp_mpi_alloc.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-mpi.c_pgp_mpi_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32* }

@.str = private unnamed_addr constant [45 x i8] c"pgp_mpi_alloc: unreasonable request: bits=%d\00", align 1
@PXE_PGP_CORRUPT_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pgp_mpi_alloc(i32 %0, %struct.TYPE_4__** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__**, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_4__** %1, %struct.TYPE_4__*** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = add nsw i32 %8, 7
  %10 = sdiv i32 %9, 8
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = icmp sgt i32 %14, 65535
  br i1 %15, label %16, label %20

16:                                               ; preds = %13, %2
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @px_debug(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = load i32, i32* @PXE_PGP_CORRUPT_DATA, align 4
  store i32 %19, i32* %3, align 4
  br label %39

20:                                               ; preds = %13
  %21 = load i32, i32* %7, align 4
  %22 = sext i32 %21 to i64
  %23 = add i64 16, %22
  %24 = trunc i64 %23 to i32
  %25 = call %struct.TYPE_4__* @px_alloc(i32 %24)
  store %struct.TYPE_4__* %25, %struct.TYPE_4__** %6, align 8
  %26 = load i32, i32* %4, align 4
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 8
  %29 = load i32, i32* %7, align 4
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 1
  store i32 %29, i32* %31, align 4
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %33 = bitcast %struct.TYPE_4__* %32 to i32*
  %34 = getelementptr inbounds i32, i32* %33, i64 16
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 2
  store i32* %34, i32** %36, align 8
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %38 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %5, align 8
  store %struct.TYPE_4__* %37, %struct.TYPE_4__** %38, align 8
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %20, %16
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @px_debug(i8*, i32) #1

declare dso_local %struct.TYPE_4__* @px_alloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
